refactor: replace deprecated URL construction with URI
Signed-off-by: Mozi <29089388+pzhlkj6612@users.noreply.github.com>